// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="default"
>
  
</h1>
`;

exports[`Render properties. code: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties. code: true"
>
  <code>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </code>
</h1>
`;

exports[`Render properties.color:  - value[0] 1`] = `
.emotion-0 {
  color: #009688!important;
}

<h1
  class="ant-typography emotion-0"
  id="properties.color: "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.content with html - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.content with html"
>
  <span
    class="emotion-1"
  >
    <div
      style="background-color:blue;"
    >
      Html Title
    </div>
  </span>
</h1>
`;

exports[`Render properties.copyable: icon - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: icon"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.copyable: icon_copyable_icon","title":"AiOutlineWarning","className":"emotion-1","required":false}
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render properties.copyable: icon: [] - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: icon: []"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.copyable: icon: []_copyable_before_icon","title":"AiOutlineWarning","className":"emotion-1","required":false}
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render properties.copyable: text: one - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: text: one"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render properties.copyable: tooltips: [] - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: tooltips: []"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Click to copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render properties.copyable: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: true"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render properties.delete: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.delete: true "
>
  <del>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </del>
</h1>
`;

exports[`Render properties.disabled: true  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-disabled emotion-0"
  id="properties.disabled: true "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.ellipsis: expandable, rows - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: expandable, rows"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render properties.ellipsis: rows - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line emotion-0"
  id="properties.ellipsis: rows"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render properties.ellipsis: rows, suffix - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: rows, suffix"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
  and other
</h1>
`;

exports[`Render properties.ellipsis: true - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line emotion-0"
  id="properties.ellipsis: true"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render properties.italic: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.italic: true"
>
  <i>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </i>
</h1>
`;

exports[`Render properties.level: 2  - value[0] 1`] = `
<h2
  class="ant-typography emotion-0"
  id="properties.level: 2 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h2>
`;

exports[`Render properties.level: 3  - value[0] 1`] = `
<h3
  class="ant-typography emotion-0"
  id="properties.level: 3 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h3>
`;

exports[`Render properties.level: 4  - value[0] 1`] = `
<h4
  class="ant-typography emotion-0"
  id="properties.level: 4 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h4>
`;

exports[`Render properties.level: 5 - value[0] 1`] = `
<h5
  class="ant-typography emotion-0"
  id="properties.level: 5"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h5>
`;

exports[`Render properties.mark: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.mark: true "
>
  <mark>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </mark>
</h1>
`;

exports[`Render properties.title - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.title"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.type: danger  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-danger emotion-0"
  id="properties.type: danger "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.type: secondary  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-secondary emotion-0"
  id="properties.type: secondary "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.type: warning  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-warning emotion-0"
  id="properties.type: warning "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render properties.underline: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.underline: true "
>
  <u>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </u>
</h1>
`;

exports[`Render required = true default - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="default"
>
  
</h1>
`;

exports[`Render required = true properties. code: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties. code: true"
>
  <code>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </code>
</h1>
`;

exports[`Render required = true properties.color:  - value[0] 1`] = `
.emotion-0 {
  color: #009688!important;
}

<h1
  class="ant-typography emotion-0"
  id="properties.color: "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.content with html - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.content with html"
>
  <span
    class="emotion-1"
  >
    <div
      style="background-color:blue;"
    >
      Html Title
    </div>
  </span>
</h1>
`;

exports[`Render required = true properties.copyable: icon - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: icon"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.copyable: icon_copyable_icon","title":"AiOutlineWarning","className":"emotion-1","required":false}
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render required = true properties.copyable: icon: [] - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: icon: []"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      class="anticon"
      role="img"
    >
      <svg
        data-testid="AiOutlineExclamationCircle"
      >
        {"id":"properties.copyable: icon: []_copyable_before_icon","title":"AiOutlineWarning","className":"emotion-1","required":false}
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render required = true properties.copyable: text: one - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: text: one"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render required = true properties.copyable: tooltips: [] - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: tooltips: []"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Click to copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render required = true properties.copyable: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.copyable: true"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
  <div
    aria-label="Copy"
    class="ant-typography-copy"
    role="button"
    style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
    tabindex="0"
  >
    <span
      aria-label="copy"
      class="anticon anticon-copy"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="copy"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="64 64 896 896"
        width="1em"
      >
        <path
          d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
        />
      </svg>
    </span>
  </div>
</h1>
`;

exports[`Render required = true properties.delete: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.delete: true "
>
  <del>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </del>
</h1>
`;

exports[`Render required = true properties.disabled: true  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-disabled emotion-0"
  id="properties.disabled: true "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.ellipsis: expandable, rows - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: expandable, rows"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render required = true properties.ellipsis: rows - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-multiple-line emotion-0"
  id="properties.ellipsis: rows"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render required = true properties.ellipsis: rows, suffix - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis emotion-0"
  id="properties.ellipsis: rows, suffix"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
  and other
</h1>
`;

exports[`Render required = true properties.ellipsis: true - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line emotion-0"
  id="properties.ellipsis: true"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.

  </span>
</h1>
`;

exports[`Render required = true properties.italic: true - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.italic: true"
>
  <i>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </i>
</h1>
`;

exports[`Render required = true properties.level: 2  - value[0] 1`] = `
<h2
  class="ant-typography emotion-0"
  id="properties.level: 2 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h2>
`;

exports[`Render required = true properties.level: 3  - value[0] 1`] = `
<h3
  class="ant-typography emotion-0"
  id="properties.level: 3 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h3>
`;

exports[`Render required = true properties.level: 4  - value[0] 1`] = `
<h4
  class="ant-typography emotion-0"
  id="properties.level: 4 "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h4>
`;

exports[`Render required = true properties.level: 5 - value[0] 1`] = `
<h5
  class="ant-typography emotion-0"
  id="properties.level: 5"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h5>
`;

exports[`Render required = true properties.mark: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.mark: true "
>
  <mark>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </mark>
</h1>
`;

exports[`Render required = true properties.title - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.title"
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.type: danger  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-danger emotion-0"
  id="properties.type: danger "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.type: secondary  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-secondary emotion-0"
  id="properties.type: secondary "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.type: warning  - value[0] 1`] = `
<h1
  class="ant-typography ant-typography-warning emotion-0"
  id="properties.type: warning "
>
  <span
    class="emotion-1"
  >
    Lorem ipsum dolor sit amet
  </span>
</h1>
`;

exports[`Render required = true properties.underline: true  - value[0] 1`] = `
<h1
  class="ant-typography emotion-0"
  id="properties.underline: true "
>
  <u>
    <span
      class="emotion-1"
    >
      Lorem ipsum dolor sit amet
    </span>
  </u>
</h1>
`;

exports[`Test Schema default 1`] = `false`;

exports[`Test Schema default 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties. code: true 1`] = `false`;

exports[`Test Schema properties. code: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.color:  1`] = `false`;

exports[`Test Schema properties.color:  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.content with html 1`] = `false`;

exports[`Test Schema properties.content with html 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: icon 1`] = `false`;

exports[`Test Schema properties.copyable: icon 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: icon: [] 1`] = `false`;

exports[`Test Schema properties.copyable: icon: [] 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: text: one 1`] = `false`;

exports[`Test Schema properties.copyable: text: one 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: tooltips: [] 1`] = `false`;

exports[`Test Schema properties.copyable: tooltips: [] 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.copyable: true 1`] = `false`;

exports[`Test Schema properties.copyable: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.delete: true  1`] = `false`;

exports[`Test Schema properties.delete: true  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.disabled: true  1`] = `false`;

exports[`Test Schema properties.disabled: true  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: expandable, rows 1`] = `false`;

exports[`Test Schema properties.ellipsis: expandable, rows 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: rows 1`] = `false`;

exports[`Test Schema properties.ellipsis: rows 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: rows, suffix 1`] = `false`;

exports[`Test Schema properties.ellipsis: rows, suffix 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.ellipsis: true 1`] = `false`;

exports[`Test Schema properties.ellipsis: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.italic: true 1`] = `false`;

exports[`Test Schema properties.italic: true 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.level: 2  1`] = `false`;

exports[`Test Schema properties.level: 2  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.level: 3  1`] = `false`;

exports[`Test Schema properties.level: 3  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.level: 4  1`] = `false`;

exports[`Test Schema properties.level: 4  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.level: 5 1`] = `false`;

exports[`Test Schema properties.level: 5 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.mark: true  1`] = `false`;

exports[`Test Schema properties.mark: true  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.title 1`] = `false`;

exports[`Test Schema properties.title 2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: danger  1`] = `false`;

exports[`Test Schema properties.type: danger  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: secondary  1`] = `false`;

exports[`Test Schema properties.type: secondary  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.type: warning  1`] = `false`;

exports[`Test Schema properties.type: warning  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;

exports[`Test Schema properties.underline: true  1`] = `false`;

exports[`Test Schema properties.underline: true  2`] = `
Array [
  Object {
    "instancePath": "/type",
    "keyword": "enum",
    "message": "must be equal to one of the allowed values",
    "params": Object {
      "allowedValues": Array [
        "secondary",
        "warning",
        "danger",
        "success",
      ],
    },
    "schemaPath": "#/properties/type/enum",
  },
]
`;
